force-app/main/default/objects/Service_Approver__c/Service_Approver__c.object-meta.xml
<CustomObject>
    <label>Service Approver</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Approver</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>