force-app/main/default/objects/Service_Approver__c/fields/Account_Department__c.field-meta.xml
<CustomField>
    <fullName>Account_Department__c</fullName>
    <formula>Department__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Department</label>
    <type>Text</type>
</CustomField>