force-app/main/default/objects/Service_Approver__c/fields/Account_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Team members based on the selected Account/Location on the Business Rule</description>
    <label>Account Team Member</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Customer Account Team</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Approver_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>