force-app/main/default/objects/Service_Approver__c/fields/Account_Title__c.field-meta.xml
<CustomField>
    <fullName>Account_Title__c</fullName>
    <description>Technical field used to identify the Auto case approval</description>
    <formula>Title__r.Name</formula>
    <label>Account Title</label>
    <type>Text</type>
</CustomField>