force-app/main/default/objects/Service_Approver__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To check Service Approvers whether it is Active or not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>