force-app/main/default/objects/Service_Approver__c/fields/Approver_Contact__c.field-meta.xml
<CustomField>
    <fullName>Approver_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approver Contact will be linked to this field.</description>
    <label>Approver Contact</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Location__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Business Rules</relationshipLabel>
    <relationshipName>Approver_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>