force-app/main/default/objects/Service_Approver__c/fields/Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>Approver_Email__c</fullName>
    <description>To populate Approver&apos;s Email</description>
    <formula>IF( Approver_Type__c == &apos;Contact&apos;, Approver_Contact__r.Email , IF( Approver_Type__c == &apos;External_Approver&apos; ,  External_Approver_Email__c ,IF(Approver_Type__c  == &apos;Email&apos;, Email__c,IF(Approver_Type__c  == &apos;User&apos;,  User__r.Email ,null))))</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>