force-app/main/default/objects/Service_Approver__c/fields/Approver_Phone__c.field-meta.xml
<CustomField>
    <fullName>Approver_Phone__c</fullName>
    <description>To populate Approver&apos;s Phone Number</description>
    <formula>IF( Approver_Type__c == &apos;Contact&apos;,  Approver_Contact__r.Phone , IF( Approver_Type__c == &apos;External_Approver&apos;, External_Approver_Phone_Number__c ,IF( Approver_Type__c == &apos;User&apos;, User__r.MobilePhone ,null )))</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>