force-app/main/default/objects/Service_Approver__c/fields/Approver_Type__c.field-meta.xml
<CustomField>
    <fullName>Approver_Type__c</fullName>
    <description>Holds the type of Approver</description>
    <formula>RecordType.Name</formula>
    <label>Approver Type</label>
    <type>Text</type>
</CustomField>