force-app/main/default/objects/Service_Approver__c/fields/Business_Rule__c.field-meta.xml
<CustomField>
    <fullName>Business_Rule__c</fullName>
    <description>Determines Businnes Rule where Approver belongs too.</description>
    <label>Business Rule</label>
    <referenceTo>Business_Rule__c</referenceTo>
    <relationshipName>Approver_Entities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>