force-app/main/default/objects/Service_Approver__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Captures Email Address</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>