force-app/main/default/objects/Service_Approver__c/fields/External_Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>External_Approver_Email__c</fullName>
    <description>Team/Person (who is NOT a Contact)</description>
    <label>External Approver Email</label>
    <type>Email</type>
</CustomField>