force-app/main/default/objects/Service_Approver__c/fields/External_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Approver_Name__c</fullName>
    <description>Name of the Team/Person (who is NOT a Contact)</description>
    <label>External Approver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>