force-app/main/default/objects/Service_Approver__c/fields/External_Approver_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Approver_Phone_Number__c</fullName>
    <description>Phone Number of the Team/Person (who is NOT a Contact)</description>
    <label>External Approver Phone Number</label>
    <type>Phone</type>
</CustomField>