force-app/main/default/objects/Service_Approver__c/fields/Fuzzy_Search__c.field-meta.xml
<CustomField>
    <fullName>Fuzzy_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fuzzy Search will allow for a title match for any requestor that contains the words in their job title. Example &quot;District Manager&quot; and District Area Manager</description>
    <inlineHelpText>Fuzzy Search will allow for a title match for any requestor that contains the words in their job title. Example &quot;District Manager&quot; and District Area Manager</inlineHelpText>
    <label>Fuzzy Search</label>
    <type>Checkbox</type>
</CustomField>