force-app/main/default/objects/Service_Approver__c/fields/is_Auto_Email__c.field-meta.xml
<CustomField>
    <fullName>is_Auto_Email__c</fullName>
    <formula>Business_Rule__r.Is_Auto_Email__c</formula>
    <label>is Auto Email</label>
    <type>Checkbox</type>
</CustomField>