force-app/main/default/objects/Service_Approver__c/fields/NTE_Rule_ExtId__c.field-meta.xml
<CustomField>
    <fullName>NTE_Rule_ExtId__c</fullName>
    <externalId>true</externalId>
    <label>NTE Rule ExtId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>