force-app/main/default/objects/Service_Approver__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>To store Origin Information.</description>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Officetrax</fullName>
            </value>
            <value>
                <fullName>Service Channel</fullName>
            </value>
            <value>
                <fullName>E-Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>