force-app/main/default/objects/Service_Approver__c/fields/Preferred_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Method__c</fullName>
    <description>Preferred Method for contacting</description>
    <formula>TEXT(Approver_Contact__r.Preferred_Method__c)</formula>
    <label>Preferred Method</label>
    <type>Text</type>
</CustomField>