force-app/main/default/objects/Service_Approver__c/fields/Request_Type_Service__c.field-meta.xml
<CustomField>
    <fullName>Request_Type_Service__c</fullName>
    <formula>IF(TEXT(Business_Rule__r.Request_Type__c) != null , TEXT(Business_Rule__r.Request_Type__c), &quot; - &quot;) + &quot; / &quot; + IF(TEXT(Business_Rule__r.Service__c) != null , TEXT(Business_Rule__r.Service__c) , &quot; - &quot;)</formula>
    <label>Request Type / Service</label>
    <type>Text</type>
</CustomField>