force-app/main/default/objects/Service_Approver__c/fields/Requester_Only__c.field-meta.xml
<CustomField>
    <fullName>Requester_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field refers whether to contact the approver or not</description>
    <label>Requester Only</label>
    <type>Checkbox</type>
</CustomField>