force-app/main/default/objects/Service_Approver__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Container Washout</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Demurrage</fullName>
            </value>
            <value>
                <fullName>Dry Run</fullName>
            </value>
            <value>
                <fullName>Equipment Installation</fullName>
            </value>
            <value>
                <fullName>Equipment Repair</fullName>
            </value>
            <value>
                <fullName>Equipment Sales</fullName>
            </value>
            <value>
                <fullName>Man Hours</fullName>
            </value>
            <value>
                <fullName>Mileage</fullName>
            </value>
            <value>
                <fullName>Site Survey</fullName>
            </value>
            <value>
                <fullName>Trip Charge</fullName>
            </value>
            <value>
                <fullName>Swapout</fullName>
            </value>
            <value>
                <fullName>Hand Pickup</fullName>
            </value>
            <value>
                <fullName>Haul</fullName>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Haul Away – No Equipment</fullName>
            </value>
            <value>
                <fullName>Disposal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>