force-app/main/default/objects/Service_Approver__c/fields/ServiceApprover__c.field-meta.xml
<CustomField>
    <fullName>ServiceApprover__c</fullName>
    <formula>IF(NoT(ISBLANK(Account_Team_Member__c)), &apos;CAT&apos; + &apos;-&apos; +  Account_Team_Member__r.Id , IF(NoT(ISBLANK(Approver_Contact__c )), &apos;Contact&apos; + &apos;-&apos; + Approver_Contact__r.Id ,IF(NoT( ISBLANK(Title__c )), &apos;Title&apos; + &apos;-&apos; + Title__r.Id,IF(NoT( ISBLANK(Department__r.Name) ), &apos;Department&apos; + &apos;-&apos;+ Department__r.Id ,IF(NoT( ISBLANK( User__c ) ),&apos;User&apos; + &apos;-&apos; +User__r.Id, IF(NoT( ISBLANK( Email__c ) ),&apos;Email&apos; + &apos;-&apos; + Email__c ,null))))))</formula>
    <label>ServiceApprover</label>
    <type>Text</type>
</CustomField>