force-app/main/default/objects/Service_Approver__c/fields/SortBy__c.field-meta.xml
<CustomField>
    <fullName>SortBy__c</fullName>
    <description>Order of Precedent</description>
    <formula>If(RecordType.Name== &apos;Contact&apos;,1,IF(RecordType.Name== &apos;Title&apos;,2,IF(RecordType.Name== &apos;Account Team Member&apos;,3,IF(RecordType.Name== &apos;User&apos;,4,IF(RecordType.Name== &apos;Department&apos;,5,IF(RecordType.Name== &apos;Email&apos;,6,null))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SortBy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>