force-app/main/default/objects/Service_Approver__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the Role/Title of the Approver.</description>
    <label>Title</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) AND (3 OR 4)</booleanFilter>
        <filterItems>
            <field>Account_Title__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Account_Title__c.Business_Rule_Title__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Account_Title__c.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Location__c</field>
            <operation>equals</operation>
            <valueField>Account_Title__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Title__c</referenceTo>
    <relationshipLabel>Service Approver</relationshipLabel>
    <relationshipName>Titles</relationshipName>
    <type>Lookup</type>
</CustomField>