force-app/main/default/objects/Service_Approver__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to User</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>