force-app/main/default/objects/Service_Approver__c/recordTypes/Account_Team_Member.recordType-meta.xml
<RecordType>
    <fullName>Account_Team_Member</fullName>
    <active>true</active>
    <label>Account Team Member</label>
</RecordType>