force-app/main/default/objects/Service_Approver__c/recordTypes/Contact.recordType-meta.xml
<RecordType>
    <fullName>Contact</fullName>
    <active>true</active>
    <description>Approver&apos;s Contact</description>
    <label>Contact</label>
</RecordType>