force-app/main/default/objects/Service_Approver__c/recordTypes/Email.recordType-meta.xml
<RecordType>
    <fullName>Email</fullName>
    <active>true</active>
    <description>Hold the records of Email type</description>
    <label>Email</label>
</RecordType>