force-app/main/default/objects/Service_Approver__c/recordTypes/External_Approver.recordType-meta.xml
<RecordType>
    <fullName>External_Approver</fullName>
    <active>true</active>
    <description>Department Approvers</description>
    <label>Department</label>
</RecordType>