force-app/main/default/objects/Service_Approver__c/recordTypes/NTE_Approval.recordType-meta.xml
<RecordType>
    <fullName>NTE_Approval</fullName>
    <active>true</active>
    <label>NTE Approval</label>
</RecordType>