force-app/main/default/objects/Service_Approver__c/recordTypes/Origin.recordType-meta.xml
<RecordType>
    <fullName>Origin</fullName>
    <active>true</active>
    <description>Origin Approver</description>
    <label>Origin</label>
</RecordType>