force-app/main/default/objects/Service_Approver__c/recordTypes/Title.recordType-meta.xml
<RecordType>
    <fullName>Title</fullName>
    <active>true</active>
    <label>Title</label>
</RecordType>