force-app/main/default/objects/Service_Approver__c/recordTypes/User.recordType-meta.xml
<RecordType>
    <fullName>User</fullName>
    <active>true</active>
    <description>Hold the records related to User</description>
    <label>User</label>
</RecordType>