force-app/main/default/objects/Service_Approver__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approver__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User__c</field>
        <operation>equals</operation>
        <value>Brian Filburn</value>
    </filters>
    <label>All</label>
</ListView>